# verynix

./: .beans.yml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  flake.nix  release.sh  vx.cabal
.beans/: verynix-0spu--usage-documentation.md  verynix-2wiv--config-file.md  verynix-9chb--caching-of-api-data.md  verynix-al8m--ai-usage-statement.md  verynix-bcf2--fuzzy-version-match-flag.md  verynix-bga2--replace-flake-utils-with-native-nix.md  verynix-bu4v--show-near-versions-when-not-existing.md  verynix-hvan--initial-real-functionality.md  verynix-igzo--standard-flags-verbose-help-version.md  verynix-jp9g--release-script.md  verynix-q2gw--if-packge-or-package-version-is-not-available-stop.md  verynix-syvf--untitled.md  verynix-twjx--omit-version-will-download-latest.md  verynix-ujuw--any-arguments-after-package-should-be-fed-to-packa.md  verynix-xtkz--hugo-latest-will-download-latest.md
app/: Main.hs
openspec/changes/archive/2026-04-09-haskell-project-setup/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-09-haskell-project-setup/specs/build-system/: spec.md
openspec/changes/archive/2026-04-09-haskell-project-setup/specs/nix-integration/: spec.md
openspec/changes/archive/2026-04-09-haskell-project-setup/specs/test-framework/: spec.md
openspec/changes/archive/2026-04-09-initial-real-functionality/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-09-initial-real-functionality/specs/cli-pipeline/: spec.md
openspec/changes/archive/2026-04-09-initial-real-functionality/specs/process-exec/: spec.md
openspec/changes/archive/2026-04-09-show-near-versions/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-09-show-near-versions/specs/version-listing/: spec.md
openspec/changes/archive/2026-04-09-show-near-versions/specs/version-suggestions/: spec.md
openspec/changes/archive/2026-04-14-caching-api-data/: proposal.md  tasks.md
openspec/changes/archive/2026-04-14-caching-api-data/specs/cache/: spec.md
openspec/changes/archive/2026-04-14-developer-docs/: design.md  proposal.md
openspec/changes/archive/2026-04-14-developer-docs/specs/dev-guide/: spec.md
openspec/changes/archive/2026-04-14-latest-version-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-14-latest-version-support/specs/cli-flags/: spec.md
openspec/changes/archive/2026-04-14-latest-version-support/specs/cli-pipeline/: spec.md
openspec/changes/archive/2026-04-14-release-script/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-14-release-script/specs/release-flow/: spec.md
openspec/changes/archive/2026-04-14-standard-cli-flags/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-14-standard-cli-flags/specs/cli-flags/: spec.md
openspec/changes/archive/2026-04-14-standard-cli-flags/specs/cli-pipeline/: spec.md
openspec/changes/archive/2026-04-15-remove-flake-utils/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-15-remove-flake-utils/specs/nix-integration/: spec.md
openspec/changes/archive/2026-04-15-strict-arg-ordering/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-15-strict-arg-ordering/specs/cli-flags/: spec.md
openspec/changes/caching-api-data/: design.md  tasks.md
openspec/changes/developer-docs/: tasks.md
openspec/changes/developer-docs/specs/readme/: spec.md
openspec/changes/initial-real-functionality/specs/api-client/: spec.md
openspec/changes/initial-real-functionality/specs/platform-detection/: spec.md
openspec/specs/build-system/: spec.md
openspec/specs/changelog-format/: spec.md
openspec/specs/dev-guide/: spec.md
openspec/specs/nix-integration/: spec.md
openspec/specs/readme/: spec.md
openspec/specs/test-framework/: spec.md
src/: Main.hs
src/Vx/: Api.hs  Cache.hs  Exec.hs  Parse.hs  Platform.hs  Resolve.hs  Suggest.hs
test/Vx/: ApiSpec.hs  CacheSpec.hs  ExecSpec.hs  ParseSpec.hs  PlatformSpec.hs  ResolveSpec.hs  SuggestSpec.hs
