cabal-version: 3.0
name:          vx
version:       0.1.0.0
synopsis:      Run any version of any Nix package in one command
license:       MIT
build-type:    Simple

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  default-extensions: OverloadedStrings

library
  import:           warnings
  hs-source-dirs:   src
  default-language: GHC2021
  exposed-modules:
    Vx.Api
    Vx.Exec
    Vx.Parse
    Vx.Platform
    Vx.Resolve
  build-depends:
    , aeson
    , base                 >=4.18 && <5
    , bytestring
    , http-client
    , http-client-tls
    , http-types
    , text
    , unix

executable vx
  import:           warnings
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: GHC2021
  build-depends:
    , base >=4.18 && <5
    , text
    , vx

test-suite vx-test
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
    hspec-discover:hspec-discover
  build-depends:
    , aeson
    , base       >=4.18 && <5
    , hspec
    , QuickCheck
    , text
    , vx
